compilers/py/sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On WHILE shift to state 1
-- On STRING shift to state 2
-- On RETURN shift to state 64
-- On PRINT shift to state 68
-- On NONE shift to state 3
-- On IF shift to state 73
-- On ID shift to state 78
-- On I32 shift to state 12
-- On FOR shift to state 93
-- On F32 shift to state 13
-- On DEF shift to state 141
-- On BOOL shift to state 14
-- On tipo_pos shift to state 17
-- On programa shift to state 160
-- On list(instrucao) shift to state 161
-- On instrucao shift to state 163
-- On funcao shift to state 165
-- On comando_while shift to state 108
-- On comando_vardec shift to state 109
-- On comando_se shift to state 110
-- On comando_retorno shift to state 111
-- On comando_print shift to state 112
-- On comando_input shift to state 113
-- On comando_for shift to state 114
-- On comando_chamada shift to state 115
-- On comando_atribuicao shift to state 116
-- On comando shift to state 166
-- On chamada shift to state 119
-- On EOF reduce production list(instrucao) -> 

State 1:
comando_while -> WHILE . expressao DPTOS NOVALINHA INDENTA nonempty_list(comando) DEDENTA [ WHILE STRING RETURN PRINT NONE IF ID I32 FOR F32 EOF DEF DEDENTA BOOL ]
-- On STRING shift to state 2
-- On NONE shift to state 3
-- On NAO shift to state 4
-- On MENOS shift to state 5
-- On LITSTRING shift to state 6
-- On LITINT shift to state 7
-- On LITFLOAT shift to state 8
-- On LITBOOL shift to state 9
-- On ID shift to state 10
-- On I32 shift to state 12
-- On F32 shift to state 13
-- On BOOL shift to state 14
-- On APAR shift to state 15
-- On variavel shift to state 16
-- On tipo_pos shift to state 17
-- On expressao shift to state 60
-- On comando_input shift to state 28
-- On chamada shift to state 29

State 2:
tipo_pos -> STRING . [ APAR ]
-- On APAR reduce production tipo_pos -> STRING 

State 3:
tipo_pos -> NONE . [ APAR ]
-- On APAR reduce production tipo_pos -> NONE 

State 4:
expressao -> NAO . expressao [ VIRG OULOG NOVALINHA MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On STRING shift to state 2
-- On NONE shift to state 3
-- On NAO shift to state 4
-- On MENOS shift to state 5
-- On LITSTRING shift to state 6
-- On LITINT shift to state 7
-- On LITFLOAT shift to state 8
-- On LITBOOL shift to state 9
-- On ID shift to state 10
-- On I32 shift to state 12
-- On F32 shift to state 13
-- On BOOL shift to state 14
-- On APAR shift to state 15
-- On variavel shift to state 16
-- On tipo_pos shift to state 17
-- On expressao shift to state 59
-- On comando_input shift to state 28
-- On chamada shift to state 29

State 5:
expressao -> MENOS . expressao [ VIRG OULOG NOVALINHA MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On STRING shift to state 2
-- On NONE shift to state 3
-- On NAO shift to state 4
-- On MENOS shift to state 5
-- On LITSTRING shift to state 6
-- On LITINT shift to state 7
-- On LITFLOAT shift to state 8
-- On LITBOOL shift to state 9
-- On ID shift to state 10
-- On I32 shift to state 12
-- On F32 shift to state 13
-- On BOOL shift to state 14
-- On APAR shift to state 15
-- On variavel shift to state 16
-- On tipo_pos shift to state 17
-- On expressao shift to state 58
-- On comando_input shift to state 28
-- On chamada shift to state 29

State 6:
expressao -> LITSTRING . [ VIRG OULOG NOVALINHA MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On VIRG reduce production expressao -> LITSTRING 
-- On OULOG reduce production expressao -> LITSTRING 
-- On NOVALINHA reduce production expressao -> LITSTRING 
-- On MUL reduce production expressao -> LITSTRING 
-- On MENOS reduce production expressao -> LITSTRING 
-- On MENORIGUAL reduce production expressao -> LITSTRING 
-- On MENOR reduce production expressao -> LITSTRING 
-- On MAIS reduce production expressao -> LITSTRING 
-- On MAIORIGUAL reduce production expressao -> LITSTRING 
-- On MAIOR reduce production expressao -> LITSTRING 
-- On IGUAL reduce production expressao -> LITSTRING 
-- On FPAR reduce production expressao -> LITSTRING 
-- On ELOG reduce production expressao -> LITSTRING 
-- On DPTOS reduce production expressao -> LITSTRING 
-- On DIV reduce production expressao -> LITSTRING 
-- On DIFERENTE reduce production expressao -> LITSTRING 

State 7:
expressao -> LITINT . [ VIRG OULOG NOVALINHA MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On VIRG reduce production expressao -> LITINT 
-- On OULOG reduce production expressao -> LITINT 
-- On NOVALINHA reduce production expressao -> LITINT 
-- On MUL reduce production expressao -> LITINT 
-- On MENOS reduce production expressao -> LITINT 
-- On MENORIGUAL reduce production expressao -> LITINT 
-- On MENOR reduce production expressao -> LITINT 
-- On MAIS reduce production expressao -> LITINT 
-- On MAIORIGUAL reduce production expressao -> LITINT 
-- On MAIOR reduce production expressao -> LITINT 
-- On IGUAL reduce production expressao -> LITINT 
-- On FPAR reduce production expressao -> LITINT 
-- On ELOG reduce production expressao -> LITINT 
-- On DPTOS reduce production expressao -> LITINT 
-- On DIV reduce production expressao -> LITINT 
-- On DIFERENTE reduce production expressao -> LITINT 

State 8:
expressao -> LITFLOAT . [ VIRG OULOG NOVALINHA MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On VIRG reduce production expressao -> LITFLOAT 
-- On OULOG reduce production expressao -> LITFLOAT 
-- On NOVALINHA reduce production expressao -> LITFLOAT 
-- On MUL reduce production expressao -> LITFLOAT 
-- On MENOS reduce production expressao -> LITFLOAT 
-- On MENORIGUAL reduce production expressao -> LITFLOAT 
-- On MENOR reduce production expressao -> LITFLOAT 
-- On MAIS reduce production expressao -> LITFLOAT 
-- On MAIORIGUAL reduce production expressao -> LITFLOAT 
-- On MAIOR reduce production expressao -> LITFLOAT 
-- On IGUAL reduce production expressao -> LITFLOAT 
-- On FPAR reduce production expressao -> LITFLOAT 
-- On ELOG reduce production expressao -> LITFLOAT 
-- On DPTOS reduce production expressao -> LITFLOAT 
-- On DIV reduce production expressao -> LITFLOAT 
-- On DIFERENTE reduce production expressao -> LITFLOAT 

State 9:
expressao -> LITBOOL . [ VIRG OULOG NOVALINHA MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On VIRG reduce production expressao -> LITBOOL 
-- On OULOG reduce production expressao -> LITBOOL 
-- On NOVALINHA reduce production expressao -> LITBOOL 
-- On MUL reduce production expressao -> LITBOOL 
-- On MENOS reduce production expressao -> LITBOOL 
-- On MENORIGUAL reduce production expressao -> LITBOOL 
-- On MENOR reduce production expressao -> LITBOOL 
-- On MAIS reduce production expressao -> LITBOOL 
-- On MAIORIGUAL reduce production expressao -> LITBOOL 
-- On MAIOR reduce production expressao -> LITBOOL 
-- On IGUAL reduce production expressao -> LITBOOL 
-- On FPAR reduce production expressao -> LITBOOL 
-- On ELOG reduce production expressao -> LITBOOL 
-- On DPTOS reduce production expressao -> LITBOOL 
-- On DIV reduce production expressao -> LITBOOL 
-- On DIFERENTE reduce production expressao -> LITBOOL 

State 10:
chamada -> ID . APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR [ VIRG OULOG NOVALINHA MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
variavel -> ID . [ VIRG OULOG NOVALINHA MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On APAR shift to state 11
-- On VIRG reduce production variavel -> ID 
-- On OULOG reduce production variavel -> ID 
-- On NOVALINHA reduce production variavel -> ID 
-- On MUL reduce production variavel -> ID 
-- On MENOS reduce production variavel -> ID 
-- On MENORIGUAL reduce production variavel -> ID 
-- On MENOR reduce production variavel -> ID 
-- On MAIS reduce production variavel -> ID 
-- On MAIORIGUAL reduce production variavel -> ID 
-- On MAIOR reduce production variavel -> ID 
-- On IGUAL reduce production variavel -> ID 
-- On FPAR reduce production variavel -> ID 
-- On ELOG reduce production variavel -> ID 
-- On DPTOS reduce production variavel -> ID 
-- On DIV reduce production variavel -> ID 
-- On DIFERENTE reduce production variavel -> ID 

State 11:
chamada -> ID APAR . loption(separated_nonempty_list(VIRG,expressao)) FPAR [ VIRG OULOG NOVALINHA MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On STRING shift to state 2
-- On NONE shift to state 3
-- On NAO shift to state 4
-- On MENOS shift to state 5
-- On LITSTRING shift to state 6
-- On LITINT shift to state 7
-- On LITFLOAT shift to state 8
-- On LITBOOL shift to state 9
-- On ID shift to state 10
-- On I32 shift to state 12
-- On F32 shift to state 13
-- On BOOL shift to state 14
-- On APAR shift to state 15
-- On variavel shift to state 16
-- On tipo_pos shift to state 17
-- On separated_nonempty_list(VIRG,expressao) shift to state 21
-- On loption(separated_nonempty_list(VIRG,expressao)) shift to state 56
-- On expressao shift to state 25
-- On comando_input shift to state 28
-- On chamada shift to state 29
-- On FPAR reduce production loption(separated_nonempty_list(VIRG,expressao)) -> 

State 12:
tipo_pos -> I32 . [ APAR ]
-- On APAR reduce production tipo_pos -> I32 

State 13:
tipo_pos -> F32 . [ APAR ]
-- On APAR reduce production tipo_pos -> F32 

State 14:
tipo_pos -> BOOL . [ APAR ]
-- On APAR reduce production tipo_pos -> BOOL 

State 15:
expressao -> APAR . expressao FPAR [ VIRG OULOG NOVALINHA MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On STRING shift to state 2
-- On NONE shift to state 3
-- On NAO shift to state 4
-- On MENOS shift to state 5
-- On LITSTRING shift to state 6
-- On LITINT shift to state 7
-- On LITFLOAT shift to state 8
-- On LITBOOL shift to state 9
-- On ID shift to state 10
-- On I32 shift to state 12
-- On F32 shift to state 13
-- On BOOL shift to state 14
-- On APAR shift to state 15
-- On variavel shift to state 16
-- On tipo_pos shift to state 17
-- On expressao shift to state 54
-- On comando_input shift to state 28
-- On chamada shift to state 29

State 16:
expressao -> variavel . [ VIRG OULOG NOVALINHA MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On VIRG reduce production expressao -> variavel 
-- On OULOG reduce production expressao -> variavel 
-- On NOVALINHA reduce production expressao -> variavel 
-- On MUL reduce production expressao -> variavel 
-- On MENOS reduce production expressao -> variavel 
-- On MENORIGUAL reduce production expressao -> variavel 
-- On MENOR reduce production expressao -> variavel 
-- On MAIS reduce production expressao -> variavel 
-- On MAIORIGUAL reduce production expressao -> variavel 
-- On MAIOR reduce production expressao -> variavel 
-- On IGUAL reduce production expressao -> variavel 
-- On FPAR reduce production expressao -> variavel 
-- On ELOG reduce production expressao -> variavel 
-- On DPTOS reduce production expressao -> variavel 
-- On DIV reduce production expressao -> variavel 
-- On DIFERENTE reduce production expressao -> variavel 

State 17:
comando_input -> tipo_pos . APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR [ WHILE VIRG STRING RETURN PRINT OULOG NOVALINHA NONE MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL IF ID I32 FPAR FOR F32 EOF ELOG DPTOS DIV DIFERENTE DEF DEDENTA BOOL ]
-- On APAR shift to state 18

State 18:
comando_input -> tipo_pos APAR . INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR [ WHILE VIRG STRING RETURN PRINT OULOG NOVALINHA NONE MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL IF ID I32 FPAR FOR F32 EOF ELOG DPTOS DIV DIFERENTE DEF DEDENTA BOOL ]
-- On INPUT shift to state 19

State 19:
comando_input -> tipo_pos APAR INPUT . APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR [ WHILE VIRG STRING RETURN PRINT OULOG NOVALINHA NONE MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL IF ID I32 FPAR FOR F32 EOF ELOG DPTOS DIV DIFERENTE DEF DEDENTA BOOL ]
-- On APAR shift to state 20

State 20:
comando_input -> tipo_pos APAR INPUT APAR . loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR [ WHILE VIRG STRING RETURN PRINT OULOG NOVALINHA NONE MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL IF ID I32 FPAR FOR F32 EOF ELOG DPTOS DIV DIFERENTE DEF DEDENTA BOOL ]
-- On STRING shift to state 2
-- On NONE shift to state 3
-- On NAO shift to state 4
-- On MENOS shift to state 5
-- On LITSTRING shift to state 6
-- On LITINT shift to state 7
-- On LITFLOAT shift to state 8
-- On LITBOOL shift to state 9
-- On ID shift to state 10
-- On I32 shift to state 12
-- On F32 shift to state 13
-- On BOOL shift to state 14
-- On APAR shift to state 15
-- On variavel shift to state 16
-- On tipo_pos shift to state 17
-- On separated_nonempty_list(VIRG,expressao) shift to state 21
-- On loption(separated_nonempty_list(VIRG,expressao)) shift to state 22
-- On expressao shift to state 25
-- On comando_input shift to state 28
-- On chamada shift to state 29
-- On FPAR reduce production loption(separated_nonempty_list(VIRG,expressao)) -> 

State 21:
loption(separated_nonempty_list(VIRG,expressao)) -> separated_nonempty_list(VIRG,expressao) . [ FPAR ]
-- On FPAR reduce production loption(separated_nonempty_list(VIRG,expressao)) -> separated_nonempty_list(VIRG,expressao) 

State 22:
comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) . FPAR FPAR [ WHILE VIRG STRING RETURN PRINT OULOG NOVALINHA NONE MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL IF ID I32 FPAR FOR F32 EOF ELOG DPTOS DIV DIFERENTE DEF DEDENTA BOOL ]
-- On FPAR shift to state 23

State 23:
comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR . FPAR [ WHILE VIRG STRING RETURN PRINT OULOG NOVALINHA NONE MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL IF ID I32 FPAR FOR F32 EOF ELOG DPTOS DIV DIFERENTE DEF DEDENTA BOOL ]
-- On FPAR shift to state 24

State 24:
comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR . [ WHILE VIRG STRING RETURN PRINT OULOG NOVALINHA NONE MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL IF ID I32 FPAR FOR F32 EOF ELOG DPTOS DIV DIFERENTE DEF DEDENTA BOOL ]
-- On WHILE reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On VIRG reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On STRING reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On RETURN reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On PRINT reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On OULOG reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On NOVALINHA reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On NONE reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On MUL reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On MENOS reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On MENORIGUAL reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On MENOR reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On MAIS reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On MAIORIGUAL reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On MAIOR reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On IGUAL reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On IF reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On ID reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On I32 reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On FPAR reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On FOR reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On F32 reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On EOF reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On ELOG reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On DPTOS reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On DIV reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On DIFERENTE reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On DEF reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On DEDENTA reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 
-- On BOOL reduce production comando_input -> tipo_pos APAR INPUT APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR FPAR 

State 25:
expressao -> expressao . ELOG expressao [ VIRG OULOG MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . OULOG expressao [ VIRG OULOG MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MAIS expressao [ VIRG OULOG MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MENOS expressao [ VIRG OULOG MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MUL expressao [ VIRG OULOG MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . DIV expressao [ VIRG OULOG MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . IGUAL expressao [ VIRG OULOG MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . DIFERENTE expressao [ VIRG OULOG MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MAIOR expressao [ VIRG OULOG MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MENOR expressao [ VIRG OULOG MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MAIORIGUAL expressao [ VIRG OULOG MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MENORIGUAL expressao [ VIRG OULOG MUL MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
separated_nonempty_list(VIRG,expressao) -> expressao . [ FPAR ]
separated_nonempty_list(VIRG,expressao) -> expressao . VIRG separated_nonempty_list(VIRG,expressao) [ FPAR ]
-- On VIRG shift to state 26
-- On OULOG shift to state 30
-- On MUL shift to state 32
-- On MENOS shift to state 34
-- On MENORIGUAL shift to state 38
-- On MENOR shift to state 42
-- On MAIS shift to state 40
-- On MAIORIGUAL shift to state 44
-- On MAIOR shift to state 46
-- On IGUAL shift to state 48
-- On ELOG shift to state 50
-- On DIV shift to state 36
-- On DIFERENTE shift to state 52
-- On FPAR reduce production separated_nonempty_list(VIRG,expressao) -> expressao 

State 26:
separated_nonempty_list(VIRG,expressao) -> expressao VIRG . separated_nonempty_list(VIRG,expressao) [ FPAR ]
-- On STRING shift to state 2
-- On NONE shift to state 3
-- On NAO shift to state 4
-- On MENOS shift to state 5
-- On LITSTRING shift to state 6
-- On LITINT shift to state 7
-- On LITFLOAT shift to state 8
-- On LITBOOL shift to state 9
-- On ID shift to state 10
-- On I32 shift to state 12
-- On F32 shift to state 13
-- On BOOL shift to state 14
-- On APAR shift to state 15
-- On variavel shift to state 16
-- On tipo_pos shift to state 17
-- On separated_nonempty_list(VIRG,expressao) shift to state 27
-- On expressao shift to state 25
-- On comando_input shift to state 28
-- On chamada shift to state 29

State 27:
separated_nonempty_list(VIRG,expressao) -> expressao VIRG separated_nonempty_list(VIRG,expressao) . [ FPAR ]
-- On FPAR reduce production separated_nonempty_list(VIRG,expressao) -> expressao VIRG separated_nonempty_list(VIRG,expressao) 
